crates/biome_cli/tests/snapshots/main_cases_reporter_checkstyle/reports_diagnostics_checkstyle_check_command_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter=checkstyle --reporter-file=file.json main.ts index.ts
```

## `file.json`

```json
<?xml version="1.0" encoding="utf-8"?>
<checkstyle version="4.3">
  <file name="index.ts">
    <error line="1" column="8" severity="warning" message="This import is unused." source="lint/correctness/noUnusedImports" />
    <error line="2" column="10" severity="warning" message="Several of these imports are unused." source="lint/correctness/noUnusedImports" />
    <error line="8" column="5" severity="warning" message="This variable f is unused." source="lint/correctness/noUnusedVariables" />
    <error line="9" column="7" severity="warning" message="This variable f is unused." source="lint/correctness/noUnusedVariables" />
    <error line="1" column="1" severity="error" message="Sort these imports." source="assist/source/organizeImports" />
    <error line="4" column="3" severity="error" message="Using == may be unsafe if you are relying on type coercion." source="lint/suspicious/noDoubleEquals" />
    <error line="6" column="1" severity="error" message="This is an unexpected use of the debugger statement." source="lint/suspicious/noDebugger" />
    <error line="8" column="5" severity="error" message="This variable implicitly has the any type." source="lint/suspicious/noImplicitAnyLet" />
    <error line="9" column="7" severity="error" message="This variable implicitly has the any type." source="lint/suspicious/noImplicitAnyLet" />
    <error line="2" column="10" severity="error" message="&apos;z&apos; is redeclared in the same scope." source="lint/suspicious/noRedeclare" />
    <error line="9" column="7" severity="error" message="&apos;f&apos; is redeclared in the same scope." source="lint/suspicious/noRedeclare" />
    <error line="0" column="0" severity="error" message="Formatter would have printed the following content:" source="format" />
  </file>
  <file name="main.ts">
    <error line="1" column="8" severity="warning" message="This import is unused." source="lint/correctness/noUnusedImports" />
    <error line="2" column="10" severity="warning" message="Several of these imports are unused." source="lint/correctness/noUnusedImports" />
    <error line="8" column="5" severity="warning" message="This variable f is unused." source="lint/correctness/noUnusedVariables" />
    <error line="9" column="7" severity="warning" message="This variable f is unused." source="lint/correctness/noUnusedVariables" />
    <error line="1" column="1" severity="error" message="Sort these imports." source="assist/source/organizeImports" />
    <error line="4" column="3" severity="error" message="Using == may be unsafe if you are relying on type coercion." source="lint/suspicious/noDoubleEquals" />
    <error line="6" column="1" severity="error" message="This is an unexpected use of the debugger statement." source="lint/suspicious/noDebugger" />
    <error line="8" column="5" severity="error" message="This variable implicitly has the any type." source="lint/suspicious/noImplicitAnyLet" />
    <error line="9" column="7" severity="error" message="This variable implicitly has the any type." source="lint/suspicious/noImplicitAnyLet" />
    <error line="2" column="10" severity="error" message="&apos;z&apos; is redeclared in the same scope." source="lint/suspicious/noRedeclare" />
    <error line="9" column="7" severity="error" message="&apos;f&apos; is redeclared in the same scope." source="lint/suspicious/noRedeclare" />
    <error line="0" column="0" severity="error" message="Formatter would have printed the following content:" source="format" />
  </file>
</checkstyle>

```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```
